--- a/index.html
+++ b/index.html
@@ -1,63 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Douglas Olivier</title>
+  <title>Who is Doug Olivier?</title>
 </head>
 
 <body>
-<h1>Douglas Olivier</h1>
+<h1>The Investigation of Doug Olivier: <br>
+    An Interactive Resume Experience</h1>
 
+<!-- This is a comment line. Press Ctrl / to create it quickly -->
+
+<h3>Recruiter 007, thanks for joining us on such short notice. We have an urgent mission for you.</h3>
+
+<img src="Closed File.jpg" alt="Case Files" height="300">
 <p>
-  <img src="Headshot.jpg" alt="Headshot">
-</p>
-
-
-<h2>Marketing and Analytics Specialist</h2>
-
-<br>
-
-<h3>Education:</h3>
-<p>
-  <strong>Kellogg School of Management, Northwestern University</strong>
-    <br> Candidate for Master of Business Administration degree, June 2018
-</p>
-
-<p>
-  <strong>Kenan-Flagler Business School, University of North Carolina at Chapel Hill</strong>
-    <br> Bachelor of Science in Business Administration, Minor in Public Policy, May 2011
-</p>
-
-<br>
-
-<h3>Experience:</h3>
-<p>
-  <strong>Adobe</strong>
-    <br> Customer Programs Testing Intern, Creative Cloud Sales Operations, Summer 2017
-</p>
-
-<p>
-  <strong>Capital One</strong>
-    <br> Business Manager, Small Business Bank Marketing, 2015-2016
-    <br> Senior Business Analyst, Small Business Bank Customer Strategy, 2013-2015
-    <br> Business Analyst, Consumer Lending, 2011-2013
-</p>
-
-<br>
-
-<h3>Skills and Expertise</h3>
-<ul>
-  <li>Marketing/Brand Strategy</li>
-  <li>Digital Marketing</li>
-  <li>Data Analytics</li>
-  <li>Business Analysis</li>
-</ul>
-
-<p>
-  <a href="aboutme.html">About Me</a>
+  <strong>Target:</strong> Our intelligence agents have identified a person of interest - a young male who goes by the name of Doug Olivier. Whether or not that is a pseudonym is unknown at this time.  Little is known about the target, but there is buzz throughout the industry that he is tremendously skilled. We have reason to believe that he would be of great value to the organization.
   <br>
-  <a href="http://linkedin.com/in/dougolivier">
-  LinkedIn</a>
+  <br>
+  <strong>Mission:</strong> Your mission is to investigate the target, learn his background and abilities, identify his current location, and confront him with an offer of employment. This is of utmost importance, so we implore you to get started immediately.
 </p>
+
+<form action="mission.html">
+    <input type="submit" value="I Accept the Mission" />
+</form>
 
 </body>
 </html>
