more image optimization

--- a/adobe.html
+++ b/adobe.html
@@ -82,7 +82,7 @@
 
 <!-- Case File -->
   <div class="container">
-      <img class="imagefullwidth" src="casefilefinal.gif">
+      <img class="imagefullwidth" src="casefilefinal.png">
   </div>
 
 <div class="casecontent">
