--- a/capitalone.html
+++ b/capitalone.html
@@ -82,7 +82,7 @@
 
 <!-- Case File -->
   <div class="container">
-      <img class="imagefullwidth" src="casefile2.gif">
+      <img class="imagefullwidth" src="casefile2.png">
   </div>
 
 <div class="casecontent">
