--- a/gamestart.html
+++ b/gamestart.html
@@ -103,7 +103,7 @@
           </div>
 
           <div class="col-sm-5">
-              <img class="caseimage" src="Closed File.gif" alt="Case Files">
+              <img class="caseimage" src="Closed File.png" alt="Case Files">
 
               <div class="button">
                     <p>
