--- a/kellogg.html
+++ b/kellogg.html
@@ -82,7 +82,7 @@
 
 <!-- Case File -->
   <div class="container">
-      <img class="imagefullwidth" src="casefile3.gif">
+      <img class="imagefullwidth" src="casefile3.png">
   </div>
 
 <div class="casecontent">
