Added Email Sequence

--- a/laptop1.html
+++ b/laptop1.html
@@ -66,42 +66,20 @@
 </div>
 
 
-  <div class="container">
-      <img class="imagelarge" src="dougimage1.jpg">
-  </div>
 
+<!-- Case Content -->
 <div class="casecontent">
-      <div class="container">
-            <div class="textbox">
-                  <h2>You caught me.</h2>
-
-            </div>
-      </div>
+    <div class="container">
+      <img class="imagelarge" src="laptop1.gif">
+  </div>
 </div>
 
-<div class="container">
-    <div class="row">
+<div class="button">
+      <p>
+        <a class="btn btn-primary" href="laptoperror.html">Hack in to email account</a>
+      </p>
+</div>
 
-        <div class="col-sm-6">
-            <div class="button">
-                  <p>
-                    <a class="btn btn-primary buttonmatch" href="Case-File-Download.jpg" download="Doug Olivier Resume Case File">
-                      Download Case Files</a>
-                  </p>
-            </div>
-        </div>
-
-        <div class="col-sm-6">
-            <div class="button">
-                  <p>
-                    <a class="btn btn-primary buttonmatch" href="mailto:doug.olivier@kellogg.northwestern.edu">
-                      Contact Me</a>
-                  </p>
-            </div>
-        </div>
-
-    </div>
-  </div>
 
 </body>
 </html>
