--- a/laptop3.html
+++ b/laptop3.html
@@ -66,42 +66,47 @@
 </div>
 
 
-  <div class="container">
-      <img class="imagelarge" src="dougimage1.jpg">
-  </div>
 
+<!-- Case Content -->
 <div class="casecontent">
-      <div class="container">
-            <div class="textbox">
-                  <h2>You caught me.</h2>
-
-            </div>
-      </div>
+    <div class="container">
+      <img class="imagelarge" src="laptop3.gif">
+  </div>
 </div>
 
-<div class="container">
-    <div class="row">
 
-        <div class="col-sm-6">
-            <div class="button">
+<div class="casecontent">
+    <div class="container">
+      <div class="textbox">
+          <h2>Looks like the target took a job with Capital One after school!</h2>
+          <p>According to the email, the company's headquarters is in Virginia, just outside of Washington DC. Hopefully he's still there and we catch him without much hassle. You better go check it out.
+          </p>
+          <br>
+
+          <div class="row">
+              <div class="col-sm-1">
+                  <h4>Task</h4>
+              </div>
+              <div class="col-sm-11">
                   <p>
-                    <a class="btn btn-primary buttonmatch" href="Case-File-Download.jpg" download="Doug Olivier Resume Case File">
-                      Download Case Files</a>
+                    Fly to Capital One's corporate headquarters to investigate further and find the target's location.
                   </p>
-            </div>
-        </div>
+              </div>
+          </div>
 
-        <div class="col-sm-6">
-            <div class="button">
-                  <p>
-                    <a class="btn btn-primary buttonmatch" href="mailto:doug.olivier@kellogg.northwestern.edu">
-                      Contact Me</a>
-                  </p>
-            </div>
-        </div>
-
+      </div>
     </div>
-  </div>
+</div>
+
+<div class="button">
+      <p>
+        <a class="btn btn-primary" href="capitalone.html">
+          <i class="fa fa-plane" aria-hidden="true"></i>
+          &nbsp;
+          Fly to Capital One HQ</a>
+      </p>
+</div>
+
 
 </body>
 </html>
