Reorganized site files and tweaked game text

--- a/gamestart.html
+++ b/gamestart.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="gamestyle.css">
 
   <!--Load Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans:700|Work+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans|Work+Sans" rel="stylesheet">
 
   <!--Load FontAwesome.io-->
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -55,7 +55,7 @@
       <div class="row">
 
           <div class="col-sm-1">
-            <img class="icon" src="magnifyingglass.png">
+            <img class="icon" src="images/magnifyingglass.png">
           </div>
 
           <div class="col-sm-11">
@@ -83,7 +83,7 @@
                       </div>
                       <div class="col-sm-10">
                           <p>
-                            Our intelligence agents have identified a person of interest - a young male who goes by the name of Doug Olivier. Whether or not that is a pseudonym is unknown at this time.  Little is known about the target, but there is buzz throughout the industry that he is tremendously skilled. We have reason to believe that he would be of great value to the organization.
+                            Our intelligence agents have identified a person of interest - a young male who goes by the name of Doug Olivier. Little is known about the target, but there is buzz throughout the industry that he is tremendously skilled. We have reason to believe that he would be of great value to the organization.
                           </p>
                       </div>
                     </div>
@@ -103,7 +103,7 @@
           </div>
 
           <div class="col-sm-5">
-              <img class="caseimage" src="Closed File.png" alt="Case Files">
+              <img class="caseimage" src="images/Closed File.png" alt="Case Files">
 
               <div class="button">
                     <p>
