--- a/incomplete.html
+++ b/incomplete.html
@@ -66,42 +66,25 @@
 </div>
 
 
-  <div class="container">
-      <img class="imagelarge" src="images/dougimage1.jpg">
-  </div>
 
 <div class="casecontent">
-      <div class="container">
-            <div class="textbox">
-                  <h2>Insert Text Here</h2>
-
-            </div>
+    <div class="container">
+      <div class="textbox-center">
+          <h2>Oops. Look like Doug hasn't finished writing the story yet.</h2>
+          <p>Come back and finish the game another time.</p>
       </div>
+    </div>
 </div>
 
-<div class="container">
-    <div class="row">
+<div class="button">
+      <p>
+        <a class="btn btn-primary" href="index.html">
+          <i class="fa fa-plane" aria-hidden="true"></i>
+          &nbsp;
+          Back to Homepage</a>
+      </p>
+</div>
 
-        <div class="col-sm-6">
-            <div class="button">
-                  <p>
-                    <a class="btn btn-primary buttonmatch" href="Case-File-Download.jpg" download="Doug Olivier Resume Case File">
-                      Download Case Files</a>
-                  </p>
-            </div>
-        </div>
-
-        <div class="col-sm-6">
-            <div class="button">
-                  <p>
-                    <a class="btn btn-primary buttonmatch" href="mailto:doug.olivier@kellogg.northwestern.edu">
-                      Contact Me</a>
-                  </p>
-            </div>
-        </div>
-
-    </div>
-  </div>
 
 </body>
 </html>
