--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 
   <!--Load Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans:700|Work+Sans" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans" rel="stylesheet">
 
   <!--Load FontAwesome.io-->
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -64,7 +64,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3">
-        <img class="imagecircle" src="dougsmile.jpg">
+        <img class="imagecircle" src="images/dougsmile.jpg">
       </div>
       <div class="col-sm-9">
         <br>
