--- a/laptop1.html
+++ b/laptop1.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="gamestyle.css">
 
   <!--Load Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans:700|Work+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans" rel="stylesheet">
 
   <!--Load FontAwesome.io-->
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -54,7 +54,7 @@
       <div class="row">
 
           <div class="col-sm-1">
-            <img class="icon" src="magnifyingglass.png">
+            <img class="icon" src="images/magnifyingglass.png">
           </div>
 
           <div class="col-sm-11">
@@ -70,13 +70,15 @@
 <!-- Case Content -->
 <div class="casecontent">
     <div class="container">
-      <img class="imagelarge" src="laptop1.gif">
+      <img class="imagelarge" src="images/laptop1.gif">
   </div>
 </div>
 
 <div class="button">
       <p>
-        <a class="btn btn-primary" href="laptoperror.html">Hack in to email account</a>
+        <a class="btn btn-primary btn-small" href="laptoperror1.html">Try Password: abc1234</a>
+        <a class="btn btn-primary btn-small" href="laptoperror2.html">Try Password: cFgx4k!j</a>
+        <a class="btn btn-primary btn-small" href="laptop2.html">Try Password: l3ks#0cp</a>
       </p>
 </div>
 
