--- a/laptoperror1.html
+++ b/laptoperror1.html
@@ -66,42 +66,30 @@
 </div>
 
 
-  <div class="container">
-      <img class="imagelarge" src="images/dougimage1.jpg">
-  </div>
 
+<!-- Case Content -->
 <div class="casecontent">
-      <div class="container">
-            <div class="textbox">
-                  <h2>Insert Text Here</h2>
-
-            </div>
-      </div>
+    <div class="container">
+      <img class="imagelarge" src="images/LaptopError.gif">
+  </div>
 </div>
 
-<div class="container">
-    <div class="row">
-
-        <div class="col-sm-6">
-            <div class="button">
-                  <p>
-                    <a class="btn btn-primary buttonmatch" href="Case-File-Download.jpg" download="Doug Olivier Resume Case File">
-                      Download Case Files</a>
-                  </p>
-            </div>
-        </div>
-
-        <div class="col-sm-6">
-            <div class="button">
-                  <p>
-                    <a class="btn btn-primary buttonmatch" href="mailto:doug.olivier@kellogg.northwestern.edu">
-                      Contact Me</a>
-                  </p>
-            </div>
-        </div>
-
+<div class="casecontent">
+    <div class="container">
+      <div class="textbox-center">
+          <h2>Nope, that didn't work.</h2>
+          <p>You really think he's going to use a password of abc1234? Come on, he's more sophisticated than that.</p>
+      </div>
     </div>
-  </div>
+</div>
+
+<div class="button">
+      <p>
+        <a class="btn btn-primary btn-small" href="laptoperror2.html">Try Password: cFgx4k!j</a>
+        <a class="btn btn-primary btn-small" href="laptop2.html">Try Password: l3ks#0cp</a>
+      </p>
+</div>
+
 
 </body>
 </html>
