--- a/laptoperror2.html
+++ b/laptoperror2.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="gamestyle.css">
 
   <!--Load Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans:700|Work+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans" rel="stylesheet">
 
   <!--Load FontAwesome.io-->
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -54,7 +54,7 @@
       <div class="row">
 
           <div class="col-sm-1">
-            <img class="icon" src="magnifyingglass.png">
+            <img class="icon" src="images/magnifyingglass.png">
           </div>
 
           <div class="col-sm-11">
@@ -70,21 +70,23 @@
 <!-- Case Content -->
 <div class="casecontent">
     <div class="container">
-      <img class="imagelarge" src="LaptopError.gif">
+      <img class="imagelarge" src="images/LaptopError.gif">
   </div>
 </div>
 
 <div class="casecontent">
     <div class="container">
-      <div class="textbox">
-          <h2>That didn't work. Be careful - too many wrong entries and we'll be locked out.</h2>
+      <div class="textbox-center">
+          <h2>That didn't work.</h2>
+          <p>Be careful, too many wrong entries and we'll be locked out.</p>
       </div>
     </div>
 </div>
 
 <div class="button">
       <p>
-        <a class="btn btn-primary" href="laptop2.html">Try to hack in again</a>
+        <a class="btn btn-primary btn-small" href="laptoperror1.html">Try Password: abc1234</a>
+        <a class="btn btn-primary btn-small" href="laptop2.html">Try Password: l3ks#0cp</a>
       </p>
 </div>
 
