--- a/page5.html
+++ b/page5.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="gamestyle.css">
 
   <!--Load Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans:700|Work+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans" rel="stylesheet">
 
   <!--Load FontAwesome.io-->
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -54,7 +54,7 @@
       <div class="row">
 
           <div class="col-sm-1">
-            <img class="icon" src="magnifyingglass.png">
+            <img class="icon" src="images/magnifyingglass.png">
           </div>
 
           <div class="col-sm-11">
@@ -68,19 +68,9 @@
 
 
 <!-- Case Content -->
-
-<!-- <div class="casecontent">
-    <div class="container">
-            <div class="textbox-center">
-                <h2>Now we're on to something.</h2>
-                <p>Our computers found a match for the enhanced image on a university ecommerce store.</p>
-            </div>
-    </div>
-</div> -->
-
 <div class="casecontent">
     <div class="container">
-        <img class="imagelarge" src="UNC-Image-Match-2.jpg">
+        <img class="imagelarge" src="images/UNC-Image-Match-2.jpg">
     </div>
 </div>
 
