--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 
   <!--Load Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans:700|Work+Sans" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans" rel="stylesheet">
 
   <!--Load FontAwesome.io-->
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="gamestart.html">Play The Game <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="gamestart.html">Play The Game<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="resume.html">Resume</a>
@@ -59,12 +59,20 @@
         <h2>About Me</h2>
 
       <div class="row">
-          <div class="col-sm-3">
-            <img class="imageresume" src="dougsmile.jpg">
+          <div class="col-sm-3 text-center">
+            <img class="imageresume" src="images/dougsmile.jpg">
+            <h2>Doug Olivier</h2>
           </div>
+
           <div class="col-sm-9">
               <p>
-              	Insert text here. Make a paragraph about myself, my background, and my abilities so people will contact me.
+                I am a marketer that approaches his work with the precision and quantitative rigor of an engineer. I bring a passion for finding insight in customer data to better understand customers, optimize user experience, and improve customer acquisition and retention.
+                  <br>
+                  <br>
+                I'm currently getting an MBA to develop my skills as a business leader, and I seek to join a growing, fast-moving tech company upon graduation in June 2018.
+                  <br>
+                  <br>
+                Location: Chicago, but willing to relocate for new opportunities.
               </p>
           </div>
       </div>
@@ -80,15 +88,15 @@
 
   <div class="container">
       <h2>Education</h2>
-
+        <br>
     <div class="row">
-        <div class="col-sm-3">
-          <img class="imageresume" src="Kellogg.jpg">
+        <div class="col-sm-3 text-center">
+          <img class="imageresume" src="images/Kellogg.jpg">
         </div>
         <div class="col-sm-9">
+            <h3>Kellogg School of Management, Northwestern University</h3>
             <p>
-              <strong>Kellogg School of Management, Northwestern University</strong><br>
-              <em>Candidate for Master of Business Administration degree, June 2018</em>
+              <strong><em>Candidate for Master of Business Administration degree, June 2018</em></strong>
               <ul>
                 <li>
                   <a>Intended major in Marketing; pathway in Data Analytics</a>
@@ -107,13 +115,13 @@
       <br>
 
       <div class="row">
-          <div class="col-sm-3">
-            <img class="imageresume" src="unclogo.png">
+          <div class="col-sm-3 text-center">
+            <img class="imageresume" src="images/unclogo.png">
           </div>
           <div class="col-sm-9">
+              <h3>Kenan-Flagler Business School, University of North Carolina</h3>
               <p>
-                <strong>Kenan-Flagler Business School, University of North Carolina</strong><br>
-                <em>Bachelor of Science in Business Administration, May 2011</em>
+                <strong><em>Bachelor of Science in Business Administration, May 2011</em></strong>
                 <ul>
                   <li>
                     <a>Performed market research for industrial software provider as part of student consulting team</a>
@@ -137,14 +145,26 @@
 
   <div class="container">
       <h2>Experience</h2>
-
+        <br>
     <div class="row">
-        <div class="col-sm-3">
-          <img class="imageresume" src="adobelogo.png">
+        <div class="col-sm-3 text-center">
+          <img class="imageresume" src="images/adobelogo.png">
         </div>
         <div class="col-sm-9">
+            <h3>Adobe, Summer 2017 - San Francisco, CA</h3>
             <p>
-              Insert text here. Make a paragraph about myself, my background, and my abilities so people will contact me.
+              <strong><em>Customer Programs Testing Intern, Creative Cloud Sales Operations</em></strong>
+              <ul>
+                <li>
+                  <a>Implemented testing and analytics methodology across customer retention program impacting 3.9M small business customers and 145 internal employees</a>
+                </li>
+                <li>
+                  <a>Developed customer retention strategies to address $40M opportunity discovered through analysis of subscription cancellation data and survey responses</a>
+                </li>
+                <li>
+                  <a>Saved over 800 hours annually by automating A/B testing, reporting, and account manager allocation</a>
+                </li>
+              </ul>
             </p>
         </div>
     </div>
@@ -152,12 +172,81 @@
     <br>
 
     <div class="row">
-        <div class="col-sm-3">
-          <img class="imageresume" src="capitalonelogo.jpg">
+        <div class="col-sm-3 text-center">
+          <img class="imageresume" src="images/capitalonelogo.jpg">
+        </div>
+        <div class="col-sm-9">
+            <h3>Capital One, 2011-2016 - McLean, VA</h3>
+            <p>
+              <strong><em>Marketing Manager, Small Business Bank Marketing, 2015-2016</em></strong>
+              <ul>
+                <li>
+                  <a>Led cross-functional teams of 10-12 brand, product, creative, and data science professionals to develop cross-sell marketing programs to 2.5M small business customers, creating over $14M in incremental annual revenue</a>
+                </li>
+                <li>
+                  <a>Developed go-to-market communication strategy for ecommerce and mobile banking products, contributing to 53,000 new small business users in first six months for flagship mobile banking platform</a>
+                </li>
+                <li>
+                  <a>Persuaded creative teams to adopt hypothesis testing and eye-tracking studies on email copy and landing page design, increasing email open rates by 25% and conversion by 35%</a>
+                </li>
+                <li>
+                  <a>Decreased average email campaign development time by 9 days through automation and data improvements</a>
+                </li>
+                <li>
+                  <a>Collaborated with leaders of Credit Card and Consumer Bank departments to identify an additional 3.2M small business owners from consumer data, more than doubling reach of cross-sell marketing program</a>
+                </li>
+                <li>
+                  <a>Managed summer intern and mentored three new associates on analytical and presentation skills</a>
+                </li>
+              </ul>
+            </p>
+        </div>
+    </div>
+
+      <br>
+
+    <div class="row">
+        <div class="col-sm-3 text-center">
+
         </div>
         <div class="col-sm-9">
             <p>
-              Insert text here. Make a paragraph about myself, my background, and my abilities so people will contact me.
+              <strong><em>Senior Business Analyst, Small Business Bank Customer Strategy, 2013-2015</em></strong>
+              <ul>
+                <li>
+                  <a>Pioneered predictive analytics model to improve relevance of sales leads for over 1,500 relationship managers and sales associates, resulting in 200%+ increase in participation and sales from outbound calling program</a>
+                </li>
+                <li>
+                  <a>Integrated firmographic and financial data from vendors and internal sources to improve accuracy of marketing segmentation models, resulting in 12% increase in sales from teller product recommendations</a>
+                </li>
+                <li>
+                  <a>Presented marketing valuations and financial projections to Senior VP of Small Business Bank and Senior VP of Sales and Service to support annual goal-setting process and multimillion-dollar budget decisions</a>
+                </li>
+                <li>
+                  <a>Taught seminar on designing effective visual presentations to over 50 associates at corporate headquarters</a>
+                </li>
+              </ul>
+            </p>
+        </div>
+    </div>
+
+        <br>
+
+    <div class="row">
+        <div class="col-sm-3 text-center">
+
+        </div>
+        <div class="col-sm-9">
+            <p>
+              <strong><em>Business Analyst, Consumer Lending, 2011-2013</em></strong>
+              <ul>
+                <li>
+                  <a>Analyzed sales data to identify bankers in need of additional training with home equity lending products, leading to 80% increase in loan applications and 4-day decrease in loan origination time for impacted associates</a>
+                </li>
+                <li>
+                  <a>Automated reporting of sales, operations, and credit monitoring, saving 8 hours per week</a>
+                </li>
+              </ul>
             </p>
         </div>
     </div>
@@ -172,14 +261,211 @@
 <div class="skills">
 
   <div class="container">
+    <div class="thincontainer">
       <h2>Skills</h2>
 
+      <br>
 
+      <h3>Business</h3>
+
+      <div class="row">
+          <div class="col-md-6">
+              <ul class="no-bullets">
+                <li>
+                  <span class="ability-title">Marketing Strategy</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                </li>
+
+                <li>
+                  <span class="ability-title">Digital Marketing</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                </li>
+
+                <li>
+                  <span class="ability-title">Testing/Optimization</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                </li>
+
+                <li>
+                  <span class="ability-title">Data Analysis</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                </li>
+            </div>
+
+            <div class="col-md-6">
+                <ul class="no-bullets">
+                  <li>
+                    <span class="ability-title">Predictive Analytics</span>
+                    <span class="ability-score">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </li>
+
+                  <li>
+                    <span class="ability-title">Web Design</span>
+                    <span class="ability-score">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </li>
+
+                  <li>
+                    <span class="ability-title">Web Development</span>
+                    <span class="ability-score">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </li>
+
+                  <li>
+                    <span class="ability-title">SEO</span>
+                    <span class="ability-score">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </li>
+              </div>
+
+      </div>
+
+      <hr>
+
+      <h3>Programs and Technical Skills</h3>
+
+      <div class="row">
+          <div class="col-md-6">
+              <ul class="no-bullets">
+
+                <li>
+                  <span class="ability-title">Microsoft Office</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                </li>
+
+                <li>
+                  <span class="ability-title">SQL</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                </li>
+
+                <li>
+                  <span class="ability-title">HTML</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star-o" aria-hidden="true"></i>
+                </li>
+
+                <li>
+                  <span class="ability-title">CSS</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star-o" aria-hidden="true"></i>
+                </li>
+
+                <li>
+                  <span class="ability-title">Stata</span>
+                  <span class="ability-score">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star-o" aria-hidden="true"></i>
+                </li>
+
+            </div>
+
+            <div class="col-md-6">
+                <ul class="no-bullets">
+                  <li>
+                    <span class="ability-title">Tableau</span>
+                    <span class="ability-score">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </li>
+
+                  <li>
+                    <span class="ability-title">Adobe Analytics</span>
+                    <span class="ability-score">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </li>
+
+                  <li>
+                    <span class="ability-title">JavaScript</span>
+                    <span class="ability-score">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </li>
+
+                  <li>
+                    <span class="ability-title">R</span>
+                    <span class="ability-score">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                  </li>
+              </div>
+
+      </div>
 
     <hr>
 
+    </div>
   </div>
-
 </div>
 
 </body>
