--- a/laptop3.html
+++ b/laptop3.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="gamestyle.css">
 
   <!--Load Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans:700|Work+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans" rel="stylesheet">
 
   <!--Load FontAwesome.io-->
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -54,7 +54,7 @@
       <div class="row">
 
           <div class="col-sm-1">
-            <img class="icon" src="magnifyingglass.png">
+            <img class="icon" src="images/magnifyingglass.png">
           </div>
 
           <div class="col-sm-11">
@@ -70,7 +70,7 @@
 <!-- Case Content -->
 <div class="casecontent">
     <div class="container">
-      <img class="imagelarge" src="laptop3.gif">
+      <img class="imagelarge" src="images/laptop3.gif">
   </div>
 </div>
 
@@ -100,7 +100,7 @@
 
 <div class="button">
       <p>
-        <a class="btn btn-primary" href="capitalone.html">
+        <a class="btn btn-primary" href="incomplete.html">
           <i class="fa fa-plane" aria-hidden="true"></i>
           &nbsp;
           Fly to Capital One HQ</a>
