--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="gamestyle.css">
 
   <!--Load Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans:700|Work+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Noto+Sans" rel="stylesheet">
 
   <!--Load FontAwesome.io-->
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -54,7 +54,7 @@
       <div class="row">
 
           <div class="col-sm-1">
-            <img class="icon" src="magnifyingglass.png">
+            <img class="icon" src="images/magnifyingglass.png">
           </div>
 
           <div class="col-sm-11">
@@ -103,7 +103,7 @@
           </div>
 
           <div class="col-sm-6">
-              <img class="caseimage" src="Carolina-Shirt1.jpg">
+              <img class="caseimage" src="images/Carolina-Shirt1.jpg">
 
               <div class="button">
                     <p>
