--- a/adobe.html
+++ b/adobe.html
@@ -34,14 +34,16 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="gamestart.html">Play The Game <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="resume.html">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/dougolivier" target="_blank">LinkedIn</a>
+            <a class="nav-link" href="https://www.linkedin.com/in/dougolivier" target="_blank">
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            LinkedIn</a>
           </li>
         </ul>
       </div>
