--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-  <title>Doug Olivier</title>
+  <title>Doug Olivier - Resume</title>
 </head>
 
 <body>
@@ -34,14 +34,16 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="gamestart.html">Play The Game<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="resume.html">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/dougolivier" target="_blank">LinkedIn</a>
+            <a class="nav-link" href="https://www.linkedin.com/in/dougolivier" target="_blank">
+              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              LinkedIn</a>
           </li>
         </ul>
       </div>
