Fixed Image References

--- a/laptop3.html
+++ b/laptop3.html
@@ -72,7 +72,7 @@
 <!-- Case Content -->
 <div class="casecontent">
     <div class="container">
-      <img class="imagelarge" src="images/laptop3.gif">
+      <img class="imagelarge" src="images/Laptop3.gif">
   </div>
 </div>
 
