--- a/laptop1.html
+++ b/laptop1.html
@@ -72,7 +72,7 @@
 <!-- Case Content -->
 <div class="casecontent">
     <div class="container">
-      <img class="imagelarge" src="images/laptop1.gif">
+      <img class="imagelarge" src="images/Laptop1.gif">
   </div>
 </div>
 
