--- a/laptop2.html
+++ b/laptop2.html
@@ -72,7 +72,7 @@
 <!-- Case Content -->
 <div class="casecontent">
     <div class="container">
-      <img class="imagelarge" src="images/laptop2.gif">
+      <img class="imagelarge" src="images/Laptop2.gif">
   </div>
 </div>
 
