Edited game text for brevity

--- a/laptop3.html
+++ b/laptop3.html
@@ -80,8 +80,8 @@
 <div class="casecontent">
     <div class="container">
       <div class="textbox">
-          <h2>Looks like the target took a job with Capital One after school!</h2>
-          <p>According to the email, the company's headquarters is in Virginia, just outside of Washington DC. Hopefully he's still there and we catch him without much hassle. You better go check it out.
+          <h2>Looks like Doug took a job with Capital One after school!</h2>
+          <p>According to the email, the company's headquarters is in Virginia, just outside of Washington DC. Hopefully he's still there and we catch him without much hassle.
           </p>
           <br>
 
@@ -91,7 +91,7 @@
               </div>
               <div class="col-sm-11">
                   <p>
-                    Fly to Capital One's corporate headquarters to investigate further and find the target's location.
+                    Fly to Capital One's corporate headquarters to investigate further.
                   </p>
               </div>
           </div>
