--- a/laptoperror2.html
+++ b/laptoperror2.html
@@ -80,7 +80,7 @@
     <div class="container">
       <div class="textbox-center">
           <h2>That didn't work.</h2>
-          <p>Be careful, too many wrong entries and we'll be locked out.</p>
+          <p>Be careful - too many wrong entries and we'll be locked out.</p>
       </div>
     </div>
 </div>
