--- a/page3.html
+++ b/page3.html
@@ -96,7 +96,7 @@
                       </div>
                       <div class="col-sm-10">
                           <p>
-                            Inspect the image carefully and search for clues that may help guide the investigation.
+                            Inspect the image carefully and search for clues.
                           </p>
                       </div>
                     </div>
