--- a/page5.html
+++ b/page5.html
@@ -82,7 +82,7 @@
 
 
                   <h2>We've now established a connection with the University of North Carolina.</h2>
-                  <p>Our computers found a match for the enhanced image on the university's ecommerce store.</p>
+                  <p>Our computers found a match on the university's ecommerce store.</p>
                   <br>
 
                   <div class="row">
@@ -91,7 +91,7 @@
                     </div>
                     <div class="col-sm-11">
                         <p>
-                          Fly to Chapel Hill, NC to meet with university administrators and learn about the target's history in the area, if any. This should get us valuable information needed to continue the investigation.
+                          Fly to Chapel Hill, NC to meet with university administrators and learn about the target's history in the area, if any.
                         </p>
                     </div>
                   </div>
