--- a/gamestart.html
+++ b/gamestart.html
@@ -76,7 +76,7 @@
 
           <div class="col-sm-7">
               <div class="textbox">
-                    <h2>Recruiter 007, thanks for joining us on such short notice. We have an urgent mission for you.</h2>
+                    <h2>Recruiter 007, we have an urgent mission for you.</h2>
                     <br>
 
                     <div class="row">
@@ -85,7 +85,7 @@
                       </div>
                       <div class="col-sm-10">
                           <p>
-                            Our intelligence agents have identified a person of interest - a young male who goes by the name of Doug Olivier. Little is known about the target, but there is buzz throughout the industry that he is tremendously skilled. We have reason to believe that he would be of great value to the organization.
+                            Our intelligence agents have identified a person of interest - a young male named Doug Olivier. Little is known about the target, but there is buzz throughout the industry that he is tremendously skilled. We have reason to believe that he would be of great value to the organization.
                           </p>
                       </div>
                     </div>
