--- a/page4.html
+++ b/page4.html
@@ -85,7 +85,7 @@
                       </div>
                       <div class="col-sm-10">
                           <p>
-                            Our best lead is the following photo sent to us by an anonymous source, which appears to show the target.
+                            Our best lead is the following photo sent to us by an anonymous source.
                           </p>
                       </div>
                     </div>
@@ -96,7 +96,7 @@
                       </div>
                       <div class="col-sm-10">
                           <p>
-                            Inspect the image carefully and search for clues that may help guide the investigation.
+                            Inspect the image carefully and search for clues.
                           </p>
                       </div>
                     </div>
