--- a/page5.html
+++ b/page5.html
@@ -72,7 +72,7 @@
 <!-- Case Content -->
 <div class="casecontent">
     <div class="container">
-        <img class="imagelarge" src="images/UNC-Image-Match-2.jpg">
+        <img class="imagemedium" src="images/UNC-Image-Match-2.jpg">
     </div>
 </div>
 
