--- a/gamestart.html
+++ b/gamestart.html
@@ -105,7 +105,7 @@
           </div>
 
           <div class="col-sm-5">
-              <img class="caseimage" src="images/Closed File.png" alt="Case Files">
+              <img class="imagesmall" src="images/Closed File.png" alt="Case Files">
 
               <div class="button">
                     <p>
