--- a/page3.html
+++ b/page3.html
@@ -85,7 +85,7 @@
                       </div>
                       <div class="col-sm-10">
                           <p>
-                            Our best lead is the following photo sent to us by an anonymous source, which appears to show the target.
+                            Our best lead is the following photo sent to us by an anonymous source.
                           </p>
                       </div>
                     </div>
